# NixNeovimPlugins

./: .gitignore  .plugins.json  .previous-update.json  README.md  blacklist.txt  blocklist.yaml  default.nix  fetch-from-m15a.yml  flake.nix  lib.nix  manifest.json  manifest.txt  manifest.yaml  output.nix  overlay.nix  overrides.nix  plugins.md  pyproject.toml  vim-plugins.json
.github/actions/check-duplicates/: action.yml
.github/actions/ci-commit/: action.yml
.github/actions/cleanup/: action.yml
.github/actions/update-plugins/: action.yml
.github/workflows/: awesome-neovim.yml  check-duplicates.yml  check.yml  clean-manifest.yml  fetch-from-m15a.yml  fetch-plugins.yaml  fetch-plugins.yml  full-sync.yml  pr-check-duplicates.yml  pr-update-changes.yaml  sync-manifest.yaml  update-all-plugins.yml  update-changes.yaml  update-plugins.yml
assets/: README_footer.md  README_header.md
pkgs/: update-vim-plugins.nix  vim-plugins.nix  vim-plugins.nix.bak
pkgs/mandown/: default.nix
pkgs/mgenplus/: default.nix
pkgs/newsreader/: default.nix
pkgs/shippori/: default.nix
pkgs/vim-plugins/: default.nix
pkgs/xsv/: default.nix
pkgs/xtermcolor/: default.nix
src/cli/: cleanup.py  fetch.py  helpers.py  main.py  mylogging.py  plugin.py  regenerate.py  spec.py  update.py
templates/: README_header.md
