[project]
name = "nixneovim"
version = "0.1.0"
description = "Python CLI to manage and generade the NixNeovim Nix packages"
requires-python = ">=3.12"
dependencies = [
    "cleo>=2.1.0",
    "dateparser>=1.2.2",
    "jsonpickle>=4.1.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
cli = "cli.main:main"

[tool.uv]
package = true
